syntaqlite-syntax/src/parser/ffi.rs


    // Incremental (token-feeding) API (from incremental.h)
    fn syntaqlite_parser_feed_token(
        p: *mut CParser,
        token_type: u32,
        text: *const c_char,
        len: u32,
    ) -> i32;
    fn syntaqlite_parser_finish(p: *mut CParser) -> i32;
    fn syntaqlite_parser_expected_tokens(p: *mut CParser, out_tokens: *mut u32, out_cap: u32)
    -> u32;
    fn syntaqlite_parser_completion_context(p: *mut CParser) -> CCompletionContext;
    fn syntaqlite_parser_begin_macro(p: *mut CParser, call_offset: u32, call_length: u32);
    fn syntaqlite_parser_end_macro(p: *mut CParser);
}
